--- a/src/app/ui/nav-links.module.scss
+++ b/src/app/ui/nav-links.module.scss
@@ -31,15 +31,18 @@
 
     &[aria-current="page"] {
       font-weight: 600;
-      color: light-dark(hsl(0, 0%, 13%), #222);
-      background-color: light-dark(hsla(158, 100%, 73%, 0.49),hsla(158, 100%, 62%, 0.85) );
-      border-width: light-dark(1px, 1px);
+      color: hsl(0, 0%, 0%);
+      // background-color: light-dark(hsla(158, 100%, 73%, 0.49),hsla(158, 100%, 62%, 0.85) );
+      // border-width: light-dark(1px, 1px);
+      // border-style: solid;
+      // border-color:light-dark((hsla(158, 100%, 30%, 1)),hsla(158, 100%, 62%, 0.85) );
+      border-width: 1px;
       border-style: solid;
-      border-color:light-dark((hsla(158, 100%, 30%, 1)),hsla(158, 100%, 62%, 0.85) );
-      border-width: light-dark(4px, 1px);
-      border-style: solid;
-      border-color:light-dark((hsla(158, 100%, 42%, 1)),hsla(158, 100%, 62%, 0.85) );
-      background-color: light-dark((hsla(158, 100%, 75%, 1)),hsla(158, 100%, 62%, 0.85) );
+      // border-color:light-dark((hsla(158, 100%, 42%, 1)),hsla(158, 100%, 62%, 0.85) );
+      // background-color: light-dark((hsla(158, 100%, 75%, 1)),hsla(158, 100%, 62%, 0.85) );
+      border-color: hsl(168.91deg 56.1% 27.84%);
+  // background-color: light-dark((hsla(158, 100%, 68%, 1)),hsla(158, 100%, 62%, 0.85) );
+      background-color: hsl(168.91deg 56.1% 67.84%);
     }
 
     &:hover {
